# docai-skills

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PROJECT_STRUCTURE.md  README.md  UV_ENVIRONMENT.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
skills/: __init__.py
skills/docai-convert2md/: README.md  SKILL.md  __init__.py
skills/docai-convert2md/tools/: README.md  convert.py
skills/docai-urlsummarizer/: README.md  skill.json
skills/docai-urlsummarizer/tools/: summarize.py
skills/docai-web2md/: README.md  SKILL.md
skills/docai-web2md/tools/: convert.py
skills/docai-web2summary/: README.md  SKILL.md  skill.json
skills/docai-web2summary/tools/: summarize.py
skills/docai-web2summary/tools/prompts/: summary_prompt.txt
skills/shared/references/: web-sources.md
tests/: test_convert.py  test_summarize.py
